[gd_scene load_steps=5 format=3 uid="uid://3ayh3a80ppyu"]

[ext_resource type="Script" path="res://enemy_ships/squads/level_three/squad_eleven.gd" id="1_vaj6h"]
[ext_resource type="PackedScene" uid="uid://dea0uuqitw0mg" path="res://enemy_ships/enemy_three.tscn" id="1_woldc"]
[ext_resource type="PackedScene" uid="uid://cs6vlk88ooliv" path="res://enemy_ships/enemy_two.tscn" id="2_feg8y"]
[ext_resource type="PackedScene" uid="uid://cc436mt0iwl8c" path="res://enemy_ships/enemy_one.tscn" id="3_lunt0"]

[node name="SquadEleven" type="Node2D"]
script = ExtResource("1_vaj6h")

[node name="EnemyThree" parent="." instance=ExtResource("1_woldc")]
position = Vector2(36, 72)

[node name="EnemyThree2" parent="." instance=ExtResource("1_woldc")]
position = Vector2(134, 74)

[node name="EnemyTwo" parent="." instance=ExtResource("2_feg8y")]
position = Vector2(35, 34)

[node name="EnemyTwo2" parent="." instance=ExtResource("2_feg8y")]
position = Vector2(133, 35)

[node name="EnemyOne" parent="." instance=ExtResource("3_lunt0")]
position = Vector2(81, 30)
